# spiderexpress

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  README.md  pyproject.toml
.github/workflows/: main.yml
R/: parse_telegram.r
docs/: routing.md  strategies.md
notebooks/: spider-trials.Rmd  spider-trials.nb.html
ponyexpress/: Configuration.py  Connector.py  Spider.py  Strategy.py  __init__.py  cli.py  model.py  plugin_manager.py  router.py  spider.py  spider_application.py  types.py
ponyexpress/connectors/: __init__.py  csv.py  telegram.py
ponyexpress/strategies/: __init__.py  random.py  snowball.py  spikyball.py  telegram.py
spiderexpress/: __init__.py  cli.py  model.py  plugin_manager.py  router.py  spider.py  types.py
spiderexpress/connectors/: __init__.py  csv.py
spiderexpress/strategies/: random.py  random_walk.py  snowball.py  spikyball.py
telegramspider/: Configuration.py  Spider.py  cli.py
tests/: conftest.py  test_Spider.py  test_config.py  test_model.py  test_package.py  test_router.py  test_spider.py  test_spiderapplication.py  test_spikyball.py  test_utils.py
tests/connectors/: test_csv_connector.py
tests/strategies/: test_random_walk.py  test_spikyball.py
tests/stubs/: edge_list.csv  seeds.json  sevens_grader_random_test.pe.yml  sevens_grader_random_walk_test.pe.yml  sevens_grader_spikyball_test.pe.yml
tests/stubs/7th_graders/: README.md  edges.csv  nodes.csv
