[tool.poetry]
name = "ponyexpress"
version = "0.1.0"
description = "A multipurpose spidery crawler for social media platforms"
authors = ["Philipp Kessling <p.kessling@leibniz-hbi.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
lxml = "*"
SQLAlchemy = "*"
loguru = "*"
numpy = "*"
requests = "*"
click = "*"
ImageHash = "*"
psycopg2-binary = "*"
PyYAML = "*"

[tool.poetry.dev-dependencies]
ipykernel = "*"
pytest = "*"
pytest-cov = "*"
black = "*"
coverage = "*"
pdoc3 = "*"
pre-commit = "*"
isort = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ponyexpress = 'ponyexpress.cli:cli'

[tool.poetry.plugins."ponyexpress.connectors"]
telegram = "ponyexpress.connectors.telegram:telegram_connector"

[tool.poetry.plugins."ponyexpress.strategies"]
spikyball = "ponyexpress.strategies.spikyball:spikyball_strategy"

[tool.pytest.ini_options]
addopts = "--cov-report html:tests/coverage --cov=ponyexpress --capture=sys"

[tool.isort]
profile = "black"
